# harness

./: .gitignore  100_PERCENT_COMPLETE.md  APPROVAL_WORKFLOW.md  CLAUDE_SUPERVISOR_GUIDE.md  CODEX_WORKFLOW.md  CURSOR_SUPERVISOR_GUIDE.md  Dockerfile.broker  FINAL_OPENCLAW_FIXES.md  GEMINI_INTEGRATION.md  HARNESS_README.md  HOSTINGER_HARDENING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_AND_SKILLS_SETUP.md  MCP_EXECUTE_REQUESTS_SETUP.md  MCP_SECURITY_SETUP.md  MCP_VPS_SETUP.md  MINIMUM_CONFIG.md  OPENCLAW_FIXES.md  OPENCLAW_INTEGRATION.md  OPENCLAW_SETUP_AGENT.md  OPENCLAW_SKILL_SETUP.md  PROJECT_INTAKE.md  PROMPT_ONLY_SETUP.md  PUSH_TO_GITHUB.md  QMD_SETUP.md  README.md  SECURITY_HARDENING.md  SECURITY_RESPONSE.md  SUPERVISOR_README.md  TOOLHIVE_INTEGRATION.md  TOOLHIVE_WEAVE_RUNBOOK.md  TOOL_BROKER_GUIDE.md  TOOL_VETTING_PIPELINE.md  VPS_DEPLOYMENT.md  ZIP_AND_SETUP.md  bootstrap.ps1  bootstrap.sh  docker-compose.yml  harness-mcp-execute.service  (+6 more)
.claude/: settings.json  supervisor.json
.cursor/: WORKTREES_GUIDE.md  context_builder_hook.ps1  hooks.json  supervisor.json
adapters/: example_jsonplaceholder.json
contextforge/: README.md  __init__.py  pyproject.toml
contextforge/cli/: __init__.py  contextforge.py
contextforge/deploy/: docker-compose.yml
contextforge/specs/: LANDSCAPE_RESEARCH.md  agent-profile.schema.json  event.schema.json  skill-pack.schema.json
contextforge/tests/acceptance/: test_vertical_slice.py
deploy/: ENV_SETUP.md  TOOLHIVE_INSTALL.md  TOOLHIVE_WEAVE_STATUS.md  WEAVE_ACTIVE.md  WEAVE_FIXED.md  WHATSAPP_CONTEXT_FIX.md  igfetch.service  (+8 more)
(+169 files in other folders)
