[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "contextforge"
version = "0.1.0"
description = "OpenClaw-native workspace analysis, skill generation, memory, and observability"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
vetting = [
    "llm-guard",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
contextforge = "contextforge.cli.contextforge:main"

[tool.setuptools.packages.find]
include = ["contextforge*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
